--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,10 @@ model-viewer {
   .preloader {
     margin: -12rem 0;
   }
+
+  .bismillah {
+    top: calc(100% - 80vh);
+  }
 }
 
 @media (max-width: 376px) {
