--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,26 @@
   --overlay-color: 255, 255, 255;
 }
 
+::-webkit-scrollbar {
+  width: 2px; /* Width of the entire scrollbar */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #000; /* Color of the tracking area */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(50 50 53); /* Color of the scroll thumb */
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scroll thumb on hover */
+}
+
 .radial-gradient {
   background: radial-gradient(
       circle at 50% 0%,
